--- a/client/package.json
+++ b/client/package.json
@@ -2,11 +2,11 @@
   "name": "job-shop-scheduling",
   "version": "1.0.0",
   "description": "Course work on the topic of job-shop scheduling optimization problem",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint src --ext .js",
-    "lint:fix": "eslint src --ext .js --fix"
+    "lint": "../node_modules/.bin/eslint src --ext .js",
+    "lint:fix": "../node_modules/.bin/eslint src --ext .js --fix"
   },
   "repository": {
     "type": "git",
