--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -4,19 +4,36 @@
     "node": true,
     "es6": true
   },
-  "extends": [
-    "eslint:recommended"
+  "plugins": [
+    "react"
   ],
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended"
+  ],
+  "parser": "babel-eslint",
   "parserOptions": {
-    "ecmaVersion": 2018
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "ecmaVersion": 2018,
+    "sourceType": "module"
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   },
   "rules": {
-    "camelcase": "error",
+    "array-bracket-spacing": ["error", "never"],
+    "arrow-spacing": "error",
+    "computed-property-spacing": ["error", "never"],
     "curly": "error",
     "eqeqeq": ["error", "always"],
     "indent": ["error", 2, {
       "SwitchCase": 1
     }],
+    "jsx-quotes": ["error", "prefer-single"],
     "key-spacing": ["error", {
       "beforeColon": false,
       "afterColon": true
@@ -31,6 +48,9 @@
     "no-useless-constructor": "error",
     "no-var": "error",
     "prefer-const": "error",
+    "react/jsx-indent": ["error", 2],
+    "react/jsx-indent-props": ["error", 2],
+    "react/jsx-tag-spacing": "error",
     "semi": ["error", "always"],
     "space-before-blocks": ["error", "always"],
     "space-in-parens": ["error", "never"],
