--- a/client/package.json
+++ b/client/package.json
@@ -1,28 +1,46 @@
 {
   "name": "job-shop-scheduling",
-  "version": "1.0.0",
-  "description": "Course work on the topic of job-shop scheduling optimization problem",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "../node_modules/.bin/eslint src --ext .js",
-    "lint:fix": "../node_modules/.bin/eslint src --ext .js --fix"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/TheSubliminal/job-shop-scheduling.git"
-  },
-  "author": "Michael Fridrikhson, Dmytro Tsyliuryk",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/TheSubliminal/job-shop-scheduling/issues"
-  },
-  "homepage": "https://github.com/TheSubliminal/job-shop-scheduling#readme",
-  "devDependencies": {
-    "eslint": "^6.8.0",
-    "nodemon": "^2.0.3"
-  },
+  "version": "0.1.0",
+  "proxy": "http://localhost:3001",
+  "private": true,
   "dependencies": {
-    "dotenv": "^8.2.0"
+    "@material-ui/core": "^4.9.13",
+    "@material-ui/icons": "^4.9.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "node-sass": "^4.14.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
+    "redux-saga-routines": "^3.2.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "lint": "eslint src --ext .js,.jsx",
+    "lint:fix": "eslint src --ext .js,.jsx --fix"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
