--- a/server/.eslintrc
+++ b/server/.eslintrc
@@ -10,7 +10,10 @@
     "ecmaVersion": 2018
   },
   "rules": {
+    "array-bracket-spacing": ["error", "never"],
+    "arrow-spacing": "error",
     "camelcase": "error",
+    "computed-property-spacing": ["error", "never"],
     "curly": "error",
     "eqeqeq": ["error", "always"],
     "indent": ["error", 2, {
