Add Heroku config

--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "nodemon server.js",
     "lint": "eslint . --ext .js",
-    "lint:fix": "eslint . --ext .js --fix"
+    "lint:fix": "eslint . --ext .js --fix",
+    "heroku-postbuild": "cd ../client && npm install && npm run build"
   },
   "author": "Michael Fridrikhson, Dmytro Tsyliuryk",
   "license": "ISC",
