--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {},
   "devDependencies": {},
   "scripts": {
-    "start": "cd server && npm start",
+    "start": "cd server && node server.js",
     "heroku-postbuild": "cd server && npm install && cd ../client && npm install && npm run build"
   },
   "repository": {
